--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.ContextAndLifecycle" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="fontFamily">@font/montserrat_regular</item>
+
     </style>
 
     <style name="Theme.ContextAndLifecycle" parent="Base.Theme.ContextAndLifecycle" />
