Notes included version with all new composables & dimensions & textSizes with localComposition.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/navigate_to_compose_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/mid_rounded_shape"
         android:text="Go to Another Activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
