Take photo feature added. Zoom feature added. CameraXManager added.

--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -46,17 +46,18 @@
         android:id="@+id/basketView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/design_default_color_primary"
-        app:cardCornerRadius="999dp"
-        app:cardElevation="8dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.807"
-        app:strokeColor="#FFEB3B"
-        app:strokeWidth="5dp"
+        app:strokeColor="#dddddd"
+        app:strokeWidth="1dp"
+        android:tooltipText="dsfsdsf"
         tools:layout_height="50dp"
         tools:layout_width="150dp">
 
