--- a/app/src/main/res/layout/fragment_lifecycle_example.xml
+++ b/app/src/main/res/layout/fragment_lifecycle_example.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentLifecycleExample">
+    tools:context=".presentation.views_fragment.FragmentLifecycleExample">
 
     <Button
         android:id="@+id/navigate_to_compose_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Navigate to Compose Screen"
+        android:text="@string/navigate_to_compose_screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:id="@+id/open_dialog_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open Dialog"
+        android:text="@string/open_dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
